feat: add api listen flag to controllerbus cli daemon
Signed-off-by: Christian Stewart <christian@paral.in>

--- a/example/exec-controller/exec-controller.yaml
+++ b/example/exec-controller/exec-controller.yaml
@@ -1,5 +1,5 @@
-boilerplate-demo-0:
+hold-open:
   config:
-    exampleField: testing
+    exampleField: Hello from YAML exec-controller!
   id: controllerbus/example/boilerplate/1
   revision: 1
