refactor: cleanup directive controller logic
Signed-off-by: Christian Stewart <christian@paral.in>

--- a/example/exec-controller/exec-controller.yaml
+++ b/example/exec-controller/exec-controller.yaml
@@ -1,5 +1,6 @@
 hold-open:
   config:
+    failWithErr: Testing error
     exampleField: Hello from YAML exec-controller!
   id: controllerbus/example/boilerplate/1
   revision: 1
