--- a/example/exec-controller/exec-controller.yaml
+++ b/example/exec-controller/exec-controller.yaml
@@ -1,6 +1,6 @@
 hold-open:
   config:
-    failWithErr: Testing error
+    # failWithErr: This error was configured in exec-controller.yaml
     exampleField: Hello from YAML exec-controller!
   id: controllerbus/example/boilerplate/1
   revision: 1
