--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -2,22 +2,59 @@ name: Tests
 
 on:
   push:
-    branches: [master, next]
+    branches: [ "master" ]
+  pull_request:
+    # The branches below must be a subset of the branches above
+    branches: [ "master" ]
 
 # Builds images for target boards.
 jobs:
-  build:
+  tests:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        go: ['1.17']
+        go: ['1.18']
+        node: [16.x]
     timeout-minutes: 10
     steps:
-      - uses: actions/checkout@v2
-      - name: Setup go
-        uses: actions/setup-go@v2
+      - uses: actions/checkout@v3
+      - name: Setup Go ${{ matrix.go }}
+        uses: actions/setup-go@v3
         with:
           go-version: ${{ matrix.go }}
-      - name: Run go tests
+      - name: Setup Node.JS ${{ matrix.node }}
+        uses: actions/setup-node@v3
+        with:
+          node-version: ${{ matrix.node }}
+          cache: 'yarn'
+      - name: Yarn install
+        run: yarn install
+      - name: Depcheck
+        run: yarn run deps
+      - name: Build Javascript
+        run: yarn run build
+      - name: Lint Javascript
+        run: yarn run lint:js
+      - name: Test Js
+        run: yarn test:js
+      # Cache go build cache, used to speedup go test
+      # https://markphelps.me/posts/speed-up-your-go-builds-with-actions-cache/
+      - id: go-cache-paths
         run: |
-          go test -v ./...
+          echo "::set-output name=go-build::$(go env GOCACHE)"
+          echo "::set-output name=go-mod::$(go env GOMODCACHE)"
+      - name: Go Build Cache
+        uses: actions/cache@v3
+        with:
+          path: ${{ steps.go-cache-paths.outputs.go-build }}
+          key: ${{ runner.os }}-go-build-${{ hashFiles('**/go.sum') }}
+      # Cache go mod cache, used to speedup builds
+      - name: Go Mod Cache
+        uses: actions/cache@v3
+        with:
+          path: ${{ steps.go-cache-paths.outputs.go-mod }}
+          key: ${{ runner.os }}-go-mod-${{ hashFiles('**/go.sum') }}
+      - name: Lint Go
+        run: yarn run lint:go
+      - name: Test Go
+        run: make test
