refactor: use @go import for vendor path
Signed-off-by: Christian Stewart <christian@paral.in>

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,7 +5,9 @@
     "moduleResolution": "node",
     "jsx": "preserve",
     "baseUrl": "./",
-    "paths": {},
+    "paths": {
+      "@go/*": ["vendor/*"]
+    },
     "noEmit": true,
     "strict": true,
     "skipLibCheck": true,
