--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,29 +1,1 @@
-{
-  "compilerOptions": {
-    "module": "esnext",
-    "target": "esnext",
-    "moduleResolution": "node",
-    "jsx": "preserve",
-    "baseUrl": "./",
-    "paths": {
-      "@go/*": ["vendor/*"]
-    },
-    "noEmit": true,
-    "strict": true,
-    "skipLibCheck": true,
-    "forceConsistentCasingInFileNames": true,
-    "resolveJsonModule": true,
-    "allowSyntheticDefaultImports": true,
-    "importsNotUsedAsValues": "remove",
-    "esModuleInterop": true
-  },
-  "exclude": [
-    "node_modules",
-    "vendor",
-    "dist"
-  ],
-  "ts-node": {
-    "esm": true,
-    "experimentalSpecifierResolution": true
-  }
-}
+./node_modules/@aperturerobotics/ts-common/tsconfig.json
