--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "build": "tsc --project tsconfig.json --noEmit false --module ES6 --target es2022 --outDir ./dist/",
     "check": "npm run typecheck",
     "typecheck": "tsc --noEmit",
-    "deps": "depcheck --ignores 'bufferutil,utf-8-validate,starpc,ts-proto,ts-poet,esbuild'",
+    "deps": "depcheck --ignores bufferutil,utf-8-validate,starpc,ts-proto,ts-poet,esbuild,@aperturerobotics/ts-common",
     "codegen": "npm run gen",
     "ci": "npm run build && npm run lint:js && npm run lint:go",
     "format": "prettier --write './!(vendor|dist)/**/(*.ts|*.tsx|*.js|*.html|*.css)'",
