--- a/renovate.json
+++ b/renovate.json
@@ -2,5 +2,15 @@
   "$schema": "https://docs.renovatebot.com/renovate-schema.json",
   "extends": [
     "config:base"
+  ],
+  "packageRules": [
+    {
+      "matchLanguages": ["go"],
+      "groupName": "go"
+    },
+    {
+      "matchLanguages": ["js"],
+      "groupName": "js"
+    }
   ]
 }
