chore(renovate): ignore hack subdir
Signed-off-by: Christian Stewart <christian@aperture.us>

--- a/.github/renovate.json
+++ b/.github/renovate.json
@@ -7,7 +7,9 @@
     "workarounds:all"
   ],
   "branchConcurrentLimit": 0,
-  "postUpdateOptions": ["gomodMassage"],
+  "ignorePaths": [
+    "hack"
+  ],
   "packageRules": [{
     "matchManagers": ["gomod"],
     "matchDepTypes": ["replace"],
