chore: update deps
Signed-off-by: Christian Stewart <christian@aperture.us>

--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     }
   ],
   "repository": {
-    "url": "git@github.com:aperturerobotics/controllerbus.git"
+    "url": "git+ssh://git@github.com/aperturerobotics/controllerbus.git"
   },
   "scripts": {
     "build": "tsc --project tsconfig.json --noEmit false --module ES6 --target es2022 --outDir ./dist/",
@@ -42,7 +42,7 @@
     "singleQuote": true
   },
   "devDependencies": {
-    "@aperturerobotics/ts-common": "0.6.4",
+    "@aperturerobotics/ts-common": "0.6.5",
     "@typescript-eslint/eslint-plugin": "^6.3.0",
     "@typescript-eslint/parser": "^6.3.0",
     "depcheck": "^1.4.3",
