--- a/package.json
+++ b/package.json
@@ -42,22 +42,23 @@
     "singleQuote": true
   },
   "devDependencies": {
-    "@aperturerobotics/ts-common": "0.6.5",
-    "@typescript-eslint/eslint-plugin": "^6.3.0",
-    "@typescript-eslint/parser": "^6.3.0",
+    "@aperturerobotics/ts-common": "0.6.7",
+    "@typescript-eslint/eslint-plugin": "^6.7.5",
+    "@typescript-eslint/parser": "^6.7.5",
     "depcheck": "^1.4.3",
-    "eslint": "^8.48.0",
+    "eslint": "^8.51.0",
     "eslint-config-prettier": "^9.0.0",
     "patch-package": "^8.0.0",
     "prettier": "^3.0.1",
-    "ts-proto": "^1.156.7",
+    "ts-proto": "^1.160.0",
+    "ts-poet": "6.6.0",
     "typescript": "^5.2.2"
   },
   "dependencies": {
     "bufferutil": "^4.0.7",
     "long": "^5.2.3",
     "protobufjs": "^7.2.4",
-    "starpc": "^0.20.0",
+    "starpc": "^0.21.2",
     "utf-8-validate": "^6.0.3"
   }
 }
