--- a/.github/renovate.json
+++ b/.github/renovate.json
@@ -8,7 +8,8 @@
   ],
   "branchConcurrentLimit": 0,
   "ignorePaths": [
-    "hack"
+    "hack",
+    "examples/plugin-demo"
   ],
   "packageRules": [{
     "matchManagers": ["gomod"],
