chore: ignore controllerbus in renovate updates
Signed-off-by: Christian Stewart <christian@aperture.us>

--- a/.github/renovate.json
+++ b/.github/renovate.json
@@ -7,13 +7,17 @@
     "workarounds:all"
   ],
   "branchConcurrentLimit": 0,
-  "ignorePaths": [
-    "hack",
-    "examples/plugin-demo"
-  ],
-  "packageRules": [{
-    "matchManagers": ["gomod"],
-    "matchDepTypes": ["replace"],
-    "enabled": false
-  }]
+  "ignorePaths": ["hack", "examples/plugin-demo"],
+  "packageRules": [
+    {
+      "matchManagers": ["gomod"],
+      "matchDepTypes": ["replace"],
+      "enabled": false
+    },
+    {
+      "matchPackagePatterns": ["github.com/aperturerobotics/controllerbus"],
+      "matchManagers": ["gomod"],
+      "enabled": false
+    }
+  ]
 }
