--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "build": "tsc --project tsconfig.json --noEmit false --module ES6 --target es2022 --outDir ./dist/",
     "check": "npm run typecheck",
     "typecheck": "tsc --noEmit",
-    "deps": "depcheck --ignores bufferutil,utf-8-validate,starpc,ts-proto,ts-poet,@aperturerobotics/ts-common",
+    "deps": "depcheck --ignore-patterns=.eslintrc.js,package.json --ignores depcheck,patch-package,prettier,typescript,bufferutil,utf-8-validate,starpc,ts-proto,ts-poet,@aperturerobotics/ts-common",
     "codegen": "npm run gen",
     "ci": "npm run build && npm run lint:js && npm run lint:go",
     "format": "prettier --write './!(vendor|dist)/**/(*.ts|*.tsx|*.js|*.html|*.css)'",
@@ -43,11 +43,7 @@
   },
   "devDependencies": {
     "@aperturerobotics/ts-common": "0.8.1",
-    "@typescript-eslint/eslint-plugin": "^6.9.1",
-    "@typescript-eslint/parser": "^6.9.1",
     "depcheck": "^1.4.7",
-    "eslint": "^8.51.0",
-    "eslint-config-prettier": "^9.0.0",
     "patch-package": "^8.0.0",
     "prettier": "^3.0.1",
     "ts-poet": "6.6.0",
