--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -17,7 +17,7 @@ jobs:
     strategy:
       matrix:
         go: ['1.21']
-        node: [18.x]
+        node: [18.x, 21.x]
     timeout-minutes: 10
     steps:
       - name: Harden Runner
