refactor: switch to protobuf-go-lite and protoc-gen-es-starpc
Signed-off-by: Christian Stewart <christian@aperture.us>

--- a/package.json
+++ b/package.json
@@ -31,12 +31,10 @@
     "gen": "make genproto",
     "test": "make test && npm run check && npm run test:js",
     "test:js": "echo No JS tests.",
-    "demo": "make demo",
     "lint": "npm run lint:go && npm run lint:js",
     "lint:go": "make lint",
     "lint:js": "ESLINT_USE_FLAT_CONFIG=false eslint -c .eslintrc.js ./",
-    "patch": "patch-package --use-yarn --patch-dir ./node_modules/@aperturerobotics/ts-common/patches",
-    "prepare": "npm run patch && go mod vendor && cd ./example/plugin-demo && go mod tidy",
+    "prepare": "go mod vendor && cd ./example/plugin-demo && go mod tidy",
     "precommit": "npm run format"
   },
   "prettier": {
@@ -44,19 +42,14 @@
     "singleQuote": true
   },
   "devDependencies": {
-    "@aperturerobotics/ts-common": "0.9.1",
+    "@aperturerobotics/ts-common": "0.11.0",
+    "@bufbuild/protoc-gen-es": "^1.8.0",
     "depcheck": "^1.4.7",
-    "patch-package": "^8.0.0",
     "prettier": "^3.0.1",
-    "ts-poet": "6.8.1",
-    "ts-proto": "^1.171.0",
-    "typescript": "^5.2.2"
+    "typescript": "^5.4.5"
   },
   "dependencies": {
-    "bufferutil": "^4.0.8",
-    "long": "^5.2.3",
-    "protobufjs": "^7.2.4",
-    "starpc": "^0.28.0",
-    "utf-8-validate": "^6.0.3"
+    "@bufbuild/protobuf": "^1.8.0",
+    "starpc": "^0.31.1"
   }
 }
