refactor: drop gabs and fastjson
Signed-off-by: Christian Stewart <christian@aperture.us>

--- a/package.json
+++ b/package.json
@@ -34,7 +34,7 @@
     "lint": "npm run lint:go && npm run lint:js",
     "lint:go": "make lint",
     "lint:js": "ESLINT_USE_FLAT_CONFIG=false eslint -c .eslintrc.js ./",
-    "prepare": "go mod vendor && cd ./example/plugin-demo && go mod tidy",
+    "prepare": "go mod vendor && rimraf ./.tools && cd ./example/plugin-demo && go mod tidy",
     "precommit": "npm run format"
   },
   "prettier": {
@@ -46,10 +46,11 @@
     "@bufbuild/protoc-gen-es": "^1.9.0",
     "depcheck": "^1.4.7",
     "prettier": "^3.0.1",
+    "rimraf": "^5.0.5",
     "typescript": "^5.4.5"
   },
   "dependencies": {
     "@bufbuild/protobuf": "^1.9.0",
-    "starpc": "^0.31.5"
+    "starpc": "^0.31.6"
   }
 }
