--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "repository": {
     "url": "git+ssh://git@github.com/aperturerobotics/controllerbus.git"
   },
+  "type": "module",
   "scripts": {
     "build": "tsc --project tsconfig.json --noEmit false --outDir ./dist/",
     "check": "npm run typecheck",
@@ -33,8 +34,8 @@
     "test:js": "echo No JS tests.",
     "lint": "npm run lint:go && npm run lint:js",
     "lint:go": "make lint",
-    "lint:js": "ESLINT_USE_FLAT_CONFIG=false eslint -c .eslintrc.js ./",
-    "prepare": "go mod vendor && rimraf ./.tools && cd ./example/plugin-demo && go mod tidy",
+    "lint:js": "ESLINT_USE_FLAT_CONFIG=false eslint -c .eslintrc.cjs ./",
+    "prepare": "go mod vendor && rimraf ./.tools && cd ./example/plugin-demo && go mod tidy && rimraf ./vendor",
     "precommit": "npm run format"
   },
   "prettier": {
@@ -49,8 +50,7 @@
     "typescript": "^5.4.5"
   },
   "dependencies": {
-    "@aptre/protobuf-es-lite": "^0.2.7",
-    "@bufbuild/protobuf": "^1.9.0",
+    "@aptre/protobuf-es-lite": "^0.2.14",
     "starpc": "^0.31.11"
   }
 }
