chore: update depcheck list
Signed-off-by: Christian Stewart <christian@aperture.us>

--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -32,7 +32,7 @@ jobs:
           cache: 'yarn'
       - name: Yarn install
         run: yarn install
-      - name: Depcheck
+      - name: Dependency check
         run: yarn run deps
       - name: Build Javascript
         run: yarn run build
