chore: update deps
Signed-off-by: Christian Stewart <christian@aperture.us>

--- a/package.json
+++ b/package.json
@@ -43,14 +43,17 @@
     "singleQuote": true
   },
   "devDependencies": {
-    "@aptre/common": "^0.15.1",
+    "@aptre/common": "^0.15.2",
     "depcheck": "^1.4.7",
     "prettier": "^3.0.1",
     "rimraf": "^5.0.5",
     "typescript": "^5.4.5"
   },
   "dependencies": {
-    "@aptre/protobuf-es-lite": "^0.4.2",
-    "starpc": "^0.32.0"
+    "@aptre/protobuf-es-lite": "^0.4.3",
+    "starpc": "^0.32.2"
+  },
+  "resolutions": {
+    "@aptre/protobuf-es-lite": "0.4.3"
   }
 }
