--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -17,30 +17,58 @@ jobs:
     strategy:
       matrix:
         go: ['1.22']
-        node: [21.x]
+        node: [22.x]
     timeout-minutes: 10
     steps:
       - uses: actions/checkout@44c2b7a8a4ea60a981eaca3cf939b5f4305c123b # v4.1.5
+
       - name: Setup Go ${{ matrix.go }}
         uses: actions/setup-go@cdcb36043654635271a94b9a6d1392de5bb323a7 # v5.0.1
         with:
           go-version: ${{ matrix.go }}
+
+      - name: Cache Go modules
+        uses: actions/cache@v4
+        with:
+          path: |
+            ~/.cache/go-build
+            ~/go/pkg/mod
+          key: ${{ runner.os }}-go-${{ hashFiles('**/go.sum') }}
+          restore-keys: |
+            ${{ runner.os }}-go-
+
       - name: Setup Node.JS ${{ matrix.node }}
         uses: actions/setup-node@60edb5dd545a775178f52524783378180af0d1f8 # v4.0.2
         with:
           node-version: ${{ matrix.node }}
           cache: 'yarn'
+
       - name: Yarn install
         run: yarn install
-      - name: Dependency check
-        run: yarn run deps
+
+      - name: Cache tools
+        uses: actions/cache@v4
+        with:
+          path: |
+            ./.tools
+          key: ${{ runner.os }}-aptre-tools-${{ hashFiles('**/go.sum') }}
+          restore-keys: |
+            ${{ runner.os }}-aptre-tools-
+
       - name: Build Javascript
         run: yarn run build
-      - name: Lint Javascript
-        run: yarn run lint:js
-      - name: Test Js
-        run: yarn test:js
-      - name: Lint Go
-        run: yarn run lint:go
+
       - name: Test Go
         run: make test
+
+      - name: Test Js
+        run: yarn test:js
+
+      - name: Lint Js
+        run: yarn run lint:js
+
+      - name: Lint Go
+        run: yarn run lint:go
+
+      - name: Depcheck Js
+        run: yarn run deps
