fix(deps): update all dependencies
Signed-off-by: Christian Stewart <christian@aperture.us>

--- a/package.json
+++ b/package.json
@@ -32,13 +32,13 @@
     "format:js": "prettier --write './!(vendor|dist)/**/(*.ts|*.tsx|*.js|*.html|*.css)'",
     "format:js:all": "prettier --write './!(vendor|dist)/**/(*.ts|*.tsx|*.js|*.html|*.css)'",
     "test": "npm run test:js && npm run test:go",
-    "test:js": "vitest run && npm run typecheck",
+    "test:js": "npm run typecheck",
     "test:go": "make test",
     "lint": "npm run lint:go && npm run lint:js",
     "lint:go": "make lint",
     "lint:js": "ESLINT_USE_FLAT_CONFIG=false eslint -c .eslintrc.cjs ./",
     "ci": "npm run build && npm run lint:js && npm run lint:go",
-    "prepare": "npm run clean && rimraf ./.tools && npm run vendor && npm run setup",
+    "prepare": "npm run clean && rimraf ./.tools && npm run vendor",
     "vendor": "go mod vendor",
     "precommit": "npm run format"
   },
