--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@aperturerobotics/controllerbus",
   "description": "Communicating concurrent controllers program framework.",
-  "version": "0.0.0",
+  "version": "0.51.3",
   "license": "Apache-2.0",
   "author": {
     "name": "Aperture Robotics LLC.",
@@ -26,20 +26,28 @@
     "clean": "rimraf ./dist/",
     "build": "tsc --project tsconfig.json --noEmit false --outDir ./dist/",
     "codegen": "npm run gen",
-    "gen": "make genproto",
+    "gen": "npm run go:aptre -- generate",
+    "gen:force": "npm run go:aptre -- generate --force",
     "format": "npm run format:js && npm run format:go",
-    "format:go": "make format",
+    "format:go": "npm run go:aptre -- format",
     "format:js": "prettier --write './!(vendor|dist)/**/(*.ts|*.tsx|*.js|*.html|*.css)'",
     "format:js:all": "prettier --write './!(vendor|dist)/**/(*.ts|*.tsx|*.js|*.html|*.css)'",
     "test": "npm run test:js && npm run test:go",
     "test:js": "npm run typecheck",
-    "test:go": "make test",
+    "test:go": "npm run go:aptre -- test",
     "lint": "npm run lint:go && npm run lint:js",
-    "lint:go": "make lint",
+    "lint:go": "npm run go:aptre -- lint",
     "lint:js": "ESLINT_USE_FLAT_CONFIG=false eslint -c .eslintrc.cjs ./",
     "ci": "npm run build && npm run lint:js && npm run lint:go",
     "prepare": "npm run clean && rimraf ./.tools && npm run vendor",
     "vendor": "go mod vendor",
+    "go:aptre": "go run -mod=mod github.com/aperturerobotics/common/cmd/aptre",
+    "release": "npm run release:version && npm run release:commit",
+    "release:minor": "npm run release:version:minor && npm run release:commit",
+    "release:version": "npm version patch -m \"release: v%s\" --no-git-tag-version",
+    "release:version:minor": "npm version minor -m \"release: v%s\" --no-git-tag-version",
+    "release:commit": "git reset && git add package.json && git commit -s -m \"release: v$(node -p \"require('./package.json').version\")\" && git tag v$(node -p \"require('./package.json').version\")",
+    "release:publish": "git push && git push --tags",
     "precommit": "npm run format"
   },
   "prettier": {
@@ -47,13 +55,13 @@
     "singleQuote": true
   },
   "devDependencies": {
-    "@aptre/common": "^0.24.0",
+    "@aptre/common": "^0.26.5",
     "depcheck": "^1.4.7",
-    "happy-dom": "^20.0.0",
-    "prettier": "^3.5.3",
-    "rimraf": "^6.0.1",
+    "happy-dom": "^20.4.0",
+    "prettier": "^3.8.1",
+    "rimraf": "^6.1.2",
     "typescript": "^5.8.3",
-    "vitest": "^4.0.0"
+    "vitest": "^4.0.18"
   },
   "dependencies": {
     "@aptre/protobuf-es-lite": "^0.5.2",
