--- a/package.json
+++ b/package.json
@@ -37,7 +37,7 @@
     "test:go": "npm run go:aptre -- test",
     "lint": "npm run lint:go && npm run lint:js",
     "lint:go": "npm run go:aptre -- lint",
-    "lint:js": "ESLINT_USE_FLAT_CONFIG=false eslint -c .eslintrc.cjs ./",
+    "lint:js": "eslint ./",
     "ci": "npm run build && npm run lint:js && npm run lint:go",
     "prepare": "npm run clean && rimraf ./.tools && npm run vendor",
     "vendor": "go mod vendor",
