chore: renovate.json: disable go version update
Signed-off-by: Christian Stewart <christian@aperture.us>

--- a/.github/renovate.json
+++ b/.github/renovate.json
@@ -12,6 +12,11 @@
       "matchManagers": ["gomod"],
       "matchDepTypes": ["replace"],
       "enabled": false
+    },
+    {
+      "matchManagers": ["gomod"],
+      "matchDepTypes": ["golang"],
+      "enabled": false
     }
   ]
 }
